# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: Python CI.yml  hexlet-check.yml
gendiff/: __init__.py  cli.py
gendiff/formatters/: json.py  plain.py  selector.py  stylish.py
gendiff/scripts/: __init__.py  diff.py  gen_diff.py  gendiff.py  get_diff.py  parse_files.py
tests/: test_gendiff.py
tests/fixtures/: 3json_diff.txt  expected.json.txt
